--- a/feed-app/package.json
+++ b/feed-app/package.json
@@ -10,10 +10,10 @@
     "antd": "^5.0.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
   "scripts": {
@@ -43,6 +43,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "web-vitals": "^3.1.0"
   }
 }
