--- a/feed-app/package.json
+++ b/feed-app/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.0.2",
     "axios": "^1.2.0",
+    "firebase": "^9.14.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
