--- a/feed-app/package.json
+++ b/feed-app/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.0.2",
     "axios": "^1.2.0",
+    "cypress": "^12.0.2",
     "firebase": "^9.14.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
@@ -28,7 +29,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:cypress/recommended"
     ]
   },
   "browserslist": {
@@ -45,6 +47,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "eslint-plugin-cypress": "^2.12.1",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "web-vitals": "^3.1.0"
